# ehl-paris

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  SPACE_README.md  app.py  msd_challenge_data_construction.py  pyproject.toml  requirements.txt
checkpoints/flow-transformer-amd-862d422.pt.parts/: SHA256SUMS
docs/: README.md  amd-gpu-access.md  artifact-manifest.md  challenge-enrichment.md  challenge.md  data-handoff.md  eval.md  handoff_agent4.md  model-checkpoints.md  pitch-deck.md  pitch-plan.md  submission-package.md  transformer-training-report.md  winning-submission-plan.md
e5/42b86e7a5d/: metadata.json
e5/42b86e7a5d/0/: content_hash.txt  full.jsonl  metadata.json
scripts/: evaluate.py  export_batch.py  post_train.py  restore_amd_checkpoint.py  smoke_test.py  train_flow.py
src/floorgen/: __init__.py  baseline.py  config.py  export.py  generate.py  postprocess.py  posttrain.py  seeding.py
src/floorgen/data/: __init__.py  normalize.py  outline.py  preprocess.py
src/floorgen/demo/: __init__.py  app.py  evidence.py  presets.json
tests/: conftest.py  test_contract.py  test_data_labels.py  test_data_load.py  test_data_outline.py  test_data_report.py  test_data_roomdist.py  test_data_split.py  test_data_transform.py  test_demo_evidence.py  test_eval.py  test_eval_integration.py  test_eval_realism.py  test_eval_scoring.py  test_export.py  test_model_data.py  test_model_loss.py  test_model_sampler.py  test_model_train_script.py  test_postprocess_semantics.py  test_posttrain.py  test_repair.py  test_repr.py
(+18 files in other folders)
