[project]
name = "floorgen"
version = "0.1.0"
description = "Generative floor-plan completion from an apartment outline (MSD / Davis AI hackathon)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Heavy / GPU-only deps for training + scoring. Installed on the AMD/ROCm box.
train = [
    "torch>=2.2",
    "torchmetrics>=1.3",
    "torch-fidelity>=0.3",
]
demo = [
    "gradio>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
floorgen-preprocess = "floorgen.data.preprocess:main"
floorgen-oracle = "floorgen.repr.oracle_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/floorgen"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["src/floorgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
